# Deep-LC

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/source/: api_ref.rst  conf.py  index.rst
docs/source/notebooks/: Finetuning.ipynb  Quickstart.ipynb
src/deep_lc/: __init__.py  anchors.py  classifier.py  config.py  conformal.py  conformal_utils.py  dataset.py  finetune.py  models.py  resnet.py  utils.py
