# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Deep-Lightcurve"
version = "0.1.1"
description = "A general Light curve classification framework based on deep learning"
readme = "README.md"
authors = [{ name = "Kaiming Cui", email = "cuikaiming6@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Topic :: Scientific/Engineering :: Astronomy",
        "Topic :: Scientific/Engineering :: Physics"]
dependencies = [
    "torch",
    "torchvision",
    "gatspy",
    "lightkurve>=2.0",
    "lightkurve-ext>=0.1.1",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/ckm3/Deep-LC"
